2004-09-28  Christopher Faylor  <cgf@timesys.com>

	* fhandler_termios.cc (fhandler_termios::tcsetpgrp): Disallow attempts
	to set the process group to a nonexistent process group.

2004-09-27  Corinna Vinschen  <corinna@vinschen.de>

	* lib/_cygwin_crt0_common.cc: Revert patch from 2004-09-16.  Brakes
	newly built DLLs.

2004-09-24  Christopher Faylor  <cgf@timesys.com>
	    Sergey Ivanov  <seriv@parkheights.dyndns.org>

	* path.cc (mount_info::read_cygdrive_info_from_registry): Default
	/cygdrive to binary mode.

2004-09-22  Pierre Humblet <pierre.humblet@ieee.org>

	* path.cc (normalize_win32_path): Only look for : in second position.
	Avoid infinite loop with names starting in double dots.
	(mount_info::conv_to_win32_path): Do not worry about a trailing dot.
	(hash_path_name): Ditto.

2004-09-20  Christopher Faylor  <cgf@timesys.com>

	* exceptions.cc (sig_handle_tty_stop): Set flag earlier.

2004-09-20  Christopher Faylor  <cgf@timesys.com>

	* exceptions.cc (sig_handle_tty_stop): Set flag that we are in a cygwin
	function to avoid a probably erroneous stack walk.

2004-09-17  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (unlink): Don't use "delete on close" on remote shares.

2004-09-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (_impure_ptr): Add export again. There are libs out there.

2004-09-16  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (_impure_ptr): Don't export.
	(reent_data): Export.
	* lib/_cygwin_crt0_common.cc (_impure_ptr): Drop entirely.  Don't
	initialize _impure_ptr or u->impure_ptr_ptr.

2004-09-15  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (_impure_ptr): Export.
	(reent_data): Don't export.
	* dcrt0.cc (reent_data): Drop.
	(__cygwin_user_data): Initialize impure_ptr as GLOBAL_REENT.
	(_dll_crt0): Initialize _impure_ptr as GLOBAL_REENT.
	* lib/_cygwin_crt0_common.cc (_impure_ptr): Drop.  Declare extern as
	dllimport instead.

2004-09-14  Christopher Faylor  <cgf@timesys.com>
